[package]
name = "api-wasi"
authors = ["Adrien Raimbault <adrien.raimbault@etu.umontpellier.fr>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
http = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.108"

[workspace]
